FOLSPRINGS-188 - Upgrade to Java 21 (#232)